# momentAIc

./: .gitignore  MomentAIc_AI_Character_Factory_Viral_Growth_Engine.docx.md  MomentAIc_Autonomous_Systems_Spec_v2.docx.md  backend_crash_logs.txt  clean_index.html  cleanup_nginx.sh  debug_backend.sh  debug_nginx.sh  deploy-production.sh  deploy_backend_update.sh  deploy_fix.sh  deploy_fixes.py  deploy_frontend_ui.sh  deploy_full_frontend.sh  ecosystem.config.js  ecosystem.safe.config.js  enable_site.sh  finish_deployment.sh  fix_deps.sh  fix_nginx.sh  fix_password.sql  fix_ssl_login.sh  full_nginx_config.txt  index.css  manifesto_content.md  master_audit.md  minimal_nginx.conf  momentaic.conf  momentaic_http.conf  nginx.conf  optimize_performance.sh  package-lock.json  push_env.sh  read_nginx_conf.sh  safe_activate.sh  source_index.html  stability_audit.md  tailwind.config.js  update_env.sh  update_password.py
momentaic-backend/: .env.example  .env.production.ready  .env.production.template  .env.script  .gitignore  Dockerfile  MORNING_BRIEF_2026-02-15.md  MORNING_BRIEF_2026-03-03.md  Makefile  README.md  admin_token.txt  alembic.ini  anti_yc_kol_targets.json  cleanup_migration.py  create_admin.py  debug_db.py  debug_redis.py  debug_startup.py  deep_research_targets.json  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  ensure_admin.py  env.complete.production  env.production.ready  events_output.txt  feedback_loop_result.json  get_id_and_trigger.py  inspect_db.py  out.txt  pyproject.toml  pytest.ini  regenerate_outreach.py  requirements.txt  run_deep_research.py  run_vc_outreach.py  seed_marketplace.py  send_hitlist_email.py  start_backend.sh  test_email.py  (+15 more)
momentaic-backend/.github/workflows/: ci.yml
momentaic-backend/alembic/: env.py
momentaic-backend/alembic/versions/: 001_initial.py  002_integrations_triggers.py  20251226_160348_9ef90fa44811_add_acquisition_channels.py  20260104_101651_ba37d68a3704_add_new_agent_types_to_enum.py  20260108_080000_28a1c68e1234_add_action_items.py  20260115_184500_ee1e12345678_add_empire_progress.py  20260211_172813_bd78173abb1b_add_agent_memory_outcome_fingerprint_.py  20260213_020000_openclaw_phase1.py  20260213_080000_character_factory.py  20260221_171531_ee9d106d6ad3_add_viralasset_model.py  20260222_081453_345fe0813ef7_add_language_to_telecom_numbers.py
momentaic-backend/app/: __init__.py  main.py  scheduler.py
momentaic-backend/app/agents/: __init__.py  acquisition_agent.py  ambassador_agent.py  base.py  (+67 more)
momentaic-backend/data/: domain_stats.json
momentaic-backend/docs/: DEPLOYMENT.md
momentaic-backend/nginx/: momentaic.conf
momentaic-backend/scripts/: README.md  audit_growth.py  check_queue.py  create_superuser.py  dogfood_launch.py  dummy_targets.csv  ensure_startup.py  ensure_user_admin.py  execute_scale_campaign.py  expand_pipeline.py  expansion_loop.py  fire_outreach.py  force_seed_posts.py  launch_hunter_campaign.py  omni_project_generator.py  promote_user.py  run_active_campaign_loop.py  run_gtm_swarm.py  run_stress_test.py  run_swarm_workers.py  seed_empire.py  seed_growth_leads.py  seed_leads.py  seed_war_room.py  test_browser.py  test_gmail_import.py  test_hunter_live.py  trigger_asset_factory.py  trigger_symbiotask_campaign.py  verify_clay.py  verify_gtm.py  verify_llms.py  verify_openclaw.py  verify_openclaw_v2.py  verify_targets.py  verify_typefully.py
momentaic-backend/tests/: __init__.py  conftest.py  test_agent_flows.py  test_agent_registry.py  test_agents.py  test_api_routes.py  test_auth.py  test_growth.py  test_revenue_dashboard.py  test_startups.py  test_ugc_agents.py  test_workflows.py  verify_agents_live.py  verify_kol_scraping.py  verify_marketing_persistence.py  verify_phase24.py
(+586 files in other folders)
